# cases

./: .gitignore  README.md
backend/: cases.json  gold_groups.json  main.py  old_cases.json  pyproject.toml
backend/src/cases/: constants.py  dependencies.py  router.py  schemas.py  service.py
frontend/: main.py  pyproject.toml  test.py
frontend/assets/data/: cases.json  gold_groups.json  skins.json
frontend/src/: backend.py  constants.py  controls.py  logger.py  utils.py
frontend/src/views/: __init__.py  router.py
frontend/src/views/cases/: constants.py  schemas.py  views.py
frontend/src/views/cases/controls/: detail.py  list.py
frontend/src/views/login/: views.py
