[tool.poetry]
name = "cases_backend"
version = "0.0.0"
description = ""
authors = ["Sergei Hilton <sergeihilton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.x"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
