[tool.poetry]
name = "cases_frontend"
version = "0.0.0"
description = ""
authors = ["Sergei Hilton <sergeihilton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.x"
flet = "^0.22.0"
httpx = "^0.27.0"
pydantic = "^2.6.4"
flet-route = "^0.3.2"
loguru = "^0.7.2"
structlog = "^24.1.0"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",
#    "D", # это пригодиться когда я буду писать документацию
]
lint.ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "N801",
]
